made about page dark mode friendly and fixed bugs for header

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -50,7 +50,6 @@
   width: 62%;
   margin-left: 19%;
   margin-top: 80px;
-  background-color: #F6F7FA;
   border-radius: 20px;
   padding: 40px;
 
