--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -24,6 +24,7 @@ header {
   font-size: 36px;
   line-height: 54px;
   margin-left: 5%;
+  margin-bottom: 0;
 }
 
 ul {
@@ -67,7 +68,7 @@ ul {
   }
 
   @media screen and (max-width: 800px) {
-    margin-top: 100px;
+    margin-top: 40px;
     width: 60px;
     height: 60px;
     margin-right: 0;
