--- a/src/index.scss
+++ b/src/index.scss
@@ -37,3 +37,11 @@ p {
     display: block;
   }
 }
+
+.lightCard {
+  background-color: #F6F7FA;
+}
+
+.darkCard {
+  background-color: #1E1E1E;
+}
